--- a/src/app/partials/footer/footer.component.html
+++ b/src/app/partials/footer/footer.component.html
@@ -13,7 +13,7 @@
        
     </div>
     <div>
-        <h1 class="border-b-2 border-gray-700">Types</h1>
+        <h1 class="border-b-2 border-gray-700 w-max">Types</h1>
         <span class="flex flex-col text-gray-900">
             <a href="/shop/types/audio-products">Audio</a>
             <a href="/shop/types/gaming-products">Gaming</a>
@@ -23,7 +23,7 @@
         </span>
     </div>
     <div>
-        <h1 class="border-b-2 border-gray-700">Brands</h1>
+        <h1 class="border-b-2 border-gray-700 w-max">Brands</h1>
         <span class="flex flex-col text-gray-900">
             <a href="/shop">Microsoft</a>
             <a href="/shop">JBL</a>
@@ -33,7 +33,7 @@
         </span>
     </div>
     <div class="w-[200px]">
-        <h1 class="border-b-2 border-gray-700">Location</h1>
+        <h1 class="border-b-2 border-gray-700 ">Location</h1>
         <p>No physical address since it is not a real shop</p>
     </div>
 </div>
