--- a/src/app/shop/product-item/product-item.component.html
+++ b/src/app/shop/product-item/product-item.component.html
@@ -10,7 +10,7 @@
           
           <div id="product-details" class="bottom-0 left-[10px]  pt-[20px]  lg:mt-[10px]  flex items-start justify-start text-sensualdark3 opacity-80 flex-col pb-[20px]">
             <h3 class="font-[200] lg:text-2xl cursor-pointer" routerLink="/shop/{{product.id}}" >{{product.productName}}</h3>
-            <span class="lg:text-2xl font-bold text-[19px]"> {{product.price | currency}}</span>
+            <span class="lg:text-2xl font-bold text-[19px]"> Ksh {{product.price }}</span>
           </div>
           <span class="absolute right-[5px] bottom-0 w-[30px] h-[30px] bg-sensualLight2 flex p-[5px] items-center justify-center rounded-full text-sensualdark3  ml-[10px] mb-[10px]">
             <i 
